fix: still use ASM8